--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "projectharuka",
+  "name": "request-transport",
   "version": "0.1.0",
-  "description": "",
+  "description": "Locale aware nodejs router",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
