Fix package.json and export

--- a/examples/locale-by-path-prefix/package.json
+++ b/examples/locale-by-path-prefix/package.json
@@ -8,5 +8,9 @@
     "build": "./node_modules/.bin/babel src --out-dir lib -w --source-maps"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "babel": "^5.8.21",
+    "request-transport": "^0.1.5"
+  }
 }
