--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "request-transport",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "description": "Locale aware nodejs router",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./node_modules/.bin/babel src --out-dir lib -w --source-maps"
