--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "request-transport",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "description": "Locale aware nodejs router",
   "main": "lib/index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "babel": "^5.8.21",
+    "body-parser": "^1.13.3",
     "express": "^4.13.3",
     "immutable": "^3.7.4"
   }
