--- a/examples/locale-by-path-prefix/package.json
+++ b/examples/locale-by-path-prefix/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/babel src --out-dir lib --source-maps"
+    "build": "./node_modules/.bin/babel src --out-dir lib"
   },
   "author": "",
   "license": "ISC",
