--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/babel src --out-dir lib",
+    "build": "babel src --out-dir lib",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -30,10 +30,22 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "babel": "^5.8.21",
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
     "immutable": "^3.7.4",
     "path-to-regexp": "^1.2.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-core": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "cookie": "^0.3.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-1"
+    ]
   }
 }
